--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dompurify": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
