--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/niketski/frontend-assessment#readme",
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "dompurify": "^3.0.6",
     "react": "^18.2.0",
